@@ -156,12 +156,7 @@ public abstract class LabKeySiteWrapper extends WebDriverWrapper
         }
         else
         {
-            log("Signing in as " + PasswordUtil.getUsername());
-            assertElementPresent(Locator.tagWithName("form", "login"));
-            setFormElement(Locator.name("email"), PasswordUtil.getUsername());
-            setFormElement(Locator.name("password"), PasswordUtil.getPassword());
-            acceptTermsOfUse(null, false);
-            clickButton("Sign In", 0);
+            fillSignInFormAndSubmit();
 
             // verify we're signed in now
             if (!waitFor(() ->
@@ -200,6 +195,16 @@ public abstract class LabKeySiteWrapper extends WebDriverWrapper
 
         _userHelper.saveCurrentDisplayName();
         WebTestHelper.saveSession(PasswordUtil.getUsername(), getDriver());
+    }
+
+    public void fillSignInFormAndSubmit()
+    {
+        log("Signing in as " + PasswordUtil.getUsername());
+        assertElementPresent(Locator.tagWithName("form", "login"));
+        setFormElement(Locator.name("email"), PasswordUtil.getUsername());
+        setFormElement(Locator.name("password"), PasswordUtil.getPassword());
+        acceptTermsOfUse(null, false);
+        clickButton("Sign In", 0);
     }
 
     /**
@@ -892,7 +897,7 @@ public abstract class LabKeySiteWrapper extends WebDriverWrapper
             DefaultRedirectStrategy redirectStrategy = new DefaultRedirectStrategy()
             {
                 @Override
-                public boolean isRedirected(HttpRequest httpRequest, HttpResponse httpResponse, HttpContext httpContext) throws ProtocolException
+                public boolean isRedirected(HttpRequest httpRequest, HttpResponse httpResponse, HttpContext httpContext)
                 {
                     boolean isRedirect = false;
                     try
@@ -979,7 +984,7 @@ public abstract class LabKeySiteWrapper extends WebDriverWrapper
         // "All Site Users" after sorting takes place
         List<Map<String, Object>> siteGroups = helper.getSiteGroups();
         assertEquals(2, siteGroups.size());
-        Map<String, Object> guests = siteGroups.get(0);
+        Map<String, Object> guests = siteGroups.getFirst();
         assertEquals("Guests", guests.get("name"));
         assertEquals(-3, guests.get("id"));
         Map<String, Object> users = siteGroups.get(1);
@@ -1745,7 +1750,7 @@ public abstract class LabKeySiteWrapper extends WebDriverWrapper
         return errorMessage;
     }
 
-    private ProductKey getProductConfiguration() throws IOException, CommandException
+    protected ProductKey getProductConfiguration() throws IOException, CommandException
     {
         SimpleGetCommand command = new SimpleGetCommand("admin", "productFeature");
         var resp = command.execute(createDefaultConnection(), "/");
