@@ -206,7 +206,7 @@ public class PieChartTest extends GenericChartsTest
         Assert.assertTrue("The plot region is not visible after a chart was created. It should be.", plotRegion.isRegionVisible());
 
         log("Click on the pie chart and validate that we are redirected to the plot wizard.");
-        clickAndWait(plotRegion.getPlots().get(0), WAIT_FOR_PAGE);
+        clickAndWait(plotRegion.getPlots().getFirst(), WAIT_FOR_PAGE);
         TimeChartWizard chartWizard = new TimeChartWizard(this).waitForReportRender();
 
         URL currentUrl = getURL();
@@ -216,17 +216,17 @@ public class PieChartTest extends GenericChartsTest
         chartTypeDialog = chartWizard.clickChartTypeButton();
 
         strTemp = chartTypeDialog.getCategories();
-        Assert.assertTrue("Categories field did not contain the expected value. Expected '" + COL_TEXT_PIE + "'. Found '" + strTemp + "'", strTemp.toLowerCase().equals(COL_TEXT_PIE.toLowerCase()));
+        Assert.assertEquals("Categories field did not contain the expected value. Expected '" + COL_TEXT_PIE + "'. Found '" + strTemp + "'", strTemp.toLowerCase(), COL_TEXT_PIE.toLowerCase());
 
         chartTypeDialog.clickCancel();
 
         pieChartLookAndFeel = clickChartLayoutButton();
 
         strTemp = pieChartLookAndFeel.getPlotTitle();
-        Assert.assertTrue("Value for plot title not as expected. Expected '" + DATA_SOURCE_1 + "' found '" + strTemp + "'", strTemp.toLowerCase().equals(DATA_SOURCE_1.toLowerCase()));
+        Assert.assertEquals("Value for plot title not as expected. Expected '" + DATA_SOURCE_1 + "' found '" + strTemp + "'", strTemp.toLowerCase(), DATA_SOURCE_1.toLowerCase());
 
         strTemp = pieChartLookAndFeel.getSubTitle();
-        Assert.assertTrue("Value for plot sub title not as expected. Expected '" + COL_TEXT_PIE + "' found '" + strTemp + "'", strTemp.toLowerCase().equals(COL_TEXT_PIE.toLowerCase()));
+        Assert.assertEquals("Value for plot sub title not as expected. Expected '" + COL_TEXT_PIE + "' found '" + strTemp + "'", strTemp.toLowerCase(), COL_TEXT_PIE.toLowerCase());
 
         pieChartLookAndFeel.clickCancel();
     }
